src/test/ui/suggestions/suggest-assoc-fn-call-with-turbofish.stderr
error[E0599]: no method named `default_hello` found for struct `GenericAssocMethod<i32>` in the current scope
  --> $DIR/suggest-assoc-fn-call-with-turbofish.rs:9:7
   |
LL | struct GenericAssocMethod<T>(T);
   | -------------------------------- method `default_hello` not found for this
...
LL |     x.default_hello();
   |     --^^^^^^^^^^^^^
   |     | |
   |     | this is an associated function, not a method
   |     help: use associated function syntax instead: `GenericAssocMethod::<i32>::default_hello`
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
note: the candidate is defined in an impl for the type `GenericAssocMethod<T>`
  --> $DIR/suggest-assoc-fn-call-with-turbofish.rs:4:5
   |
LL |     fn default_hello() {}
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
